# rusty-tasks-api

./: .gitignore  Cargo.toml
.sqlx/: query-33aa59ca9ce7b51c6dcbd59bbff8ccfbff4f6dd9b53118885851f2bfe3ac4d3c.json  query-41f5f7b39e5b58d2ef4a6f5e12868921d5f51cb8046d0018a3faff60e0fd6089.json  query-e51888e6917d3d3c3959b95a693baa9e62c3252fcca306b7eee9d9fd15322087.json
migrations/: 001_init.sql
src/: config.rs  db.rs  error.rs  main.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/models/: task.rs  user.rs
src/routes/: auth.rs  tasks.rs
