[package]
name = "rusty-tasks-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.35", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
thiserror = "1.0"

jsonwebtoken = "9"
argon2 = "0.5"
rand_core = "0.6"

headers = "0.4"
tower-http = { version = "0.5", features = ["limit"] }
